--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
-    "functions": {
-        "api/index.php":{
-            "runtime": "vercel-php@0.7.3"
-        }
-    }
+    "version":2,
+    "builds": [
+        {"src":"/api/index.php", "use": "vercel-php@0.5.2"},
+        {"src":"/public/**", "use": "@vercel/static"}
+    ]
 }
