--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,10 @@
 {
-    "version":2,
-    "builds": [
-        {"src":"/api/index.php", "use": "vercel-php@0.7.3"},
-        {"src":"/public/**", "use": "@vercel/static"}
+    "functions": {
+      "api/index.php": {
+        "runtime": "vercel-php@0.3.6"
+      }
+    },
+    "routes": [
+      { "src": "/(.*)", "dest": "/api/index.php" }
     ]
-}
+  }
